414. Turn Images Into NumPy Arrays

--- a/13_numpy_introductions.ipynb
+++ b/13_numpy_introductions.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "13_numpy_introductions",
       "provenance": [],
-      "authorship_tag": "ABX9TyMWKGQtbEFVcay/5OfptVN4",
+      "authorship_tag": "ABX9TyMZhTtg75fh++HfJGD4r6+m",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4114,9 +4114,363 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "NIuV-Tyb46Wm"
+      },
+      "source": [
+        "## 6. Practical Examples - NumPy in Action !!!"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MfGgLhXK5MgS",
+        "outputId": "7a582587-99ef-4397-83c7-92f1005ca6f2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Turn an image into a NumPy array\n",
+        "from matplotlib.image import imread\n",
+        "\n",
+        "panda = imread(\"panda.png\")\n",
+        "print(type(panda))"
+      ],
+      "execution_count": 151,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'numpy.ndarray'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AaAmsii36K7H",
+        "outputId": "c131d42f-2267-437f-cac3-2b5e1c3de382",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "panda.shape, panda.size, panda.ndim"
+      ],
+      "execution_count": 153,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((2330, 3500, 3), 24465000, 3)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 153
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FvHjWq7d6Tb6",
+        "outputId": "4cca01cf-a95c-441a-cc70-d186157f86ec",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "panda[:5]"
+      ],
+      "execution_count": 154,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[[0.05490196, 0.10588235, 0.06666667],\n",
+              "        [0.05490196, 0.10588235, 0.06666667],\n",
+              "        [0.05490196, 0.10588235, 0.06666667],\n",
+              "        ...,\n",
+              "        [0.16470589, 0.12941177, 0.09411765],\n",
+              "        [0.16470589, 0.12941177, 0.09411765],\n",
+              "        [0.16470589, 0.12941177, 0.09411765]],\n",
+              "\n",
+              "       [[0.05490196, 0.10588235, 0.06666667],\n",
+              "        [0.05490196, 0.10588235, 0.06666667],\n",
+              "        [0.05490196, 0.10588235, 0.06666667],\n",
+              "        ...,\n",
+              "        [0.16470589, 0.12941177, 0.09411765],\n",
+              "        [0.16470589, 0.12941177, 0.09411765],\n",
+              "        [0.16470589, 0.12941177, 0.09411765]],\n",
+              "\n",
+              "       [[0.05490196, 0.10588235, 0.06666667],\n",
+              "        [0.05490196, 0.10588235, 0.06666667],\n",
+              "        [0.05490196, 0.10588235, 0.06666667],\n",
+              "        ...,\n",
+              "        [0.16470589, 0.12941177, 0.09411765],\n",
+              "        [0.16470589, 0.12941177, 0.09411765],\n",
+              "        [0.16470589, 0.12941177, 0.09411765]],\n",
+              "\n",
+              "       [[0.05490196, 0.10588235, 0.06666667],\n",
+              "        [0.05490196, 0.10588235, 0.06666667],\n",
+              "        [0.05490196, 0.10588235, 0.06666667],\n",
+              "        ...,\n",
+              "        [0.16862746, 0.13333334, 0.09803922],\n",
+              "        [0.16862746, 0.13333334, 0.09803922],\n",
+              "        [0.16862746, 0.13333334, 0.09803922]],\n",
+              "\n",
+              "       [[0.05490196, 0.10588235, 0.06666667],\n",
+              "        [0.05490196, 0.10588235, 0.06666667],\n",
+              "        [0.05490196, 0.10588235, 0.06666667],\n",
+              "        ...,\n",
+              "        [0.16862746, 0.13333334, 0.09803922],\n",
+              "        [0.16862746, 0.13333334, 0.09803922],\n",
+              "        [0.16862746, 0.13333334, 0.09803922]]], dtype=float32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 154
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4Wqo14vR6Wlo",
+        "outputId": "77fd1dff-9c03-4565-f450-90712af76de7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "car = imread(\"car-photo.png\")\n",
+        "print(type(car))"
+      ],
+      "execution_count": 155,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'numpy.ndarray'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lbVXCm666cLc",
+        "outputId": "ec57accc-d5f2-415f-bd85-253124973d63",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "car.size, car.shape, car.ndim"
+      ],
+      "execution_count": 156,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(991300, (431, 575, 4), 3)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 156
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EAEFMpYz6eUH",
+        "outputId": "eafa74b8-be61-4b54-cb75-5f2bb8cccef1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "car[:5]"
+      ],
+      "execution_count": 157,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[[0.5019608 , 0.50980395, 0.4862745 , 1.        ],\n",
+              "        [0.3372549 , 0.34509805, 0.30588236, 1.        ],\n",
+              "        [0.20392157, 0.21568628, 0.14901961, 1.        ],\n",
+              "        ...,\n",
+              "        [0.64705884, 0.7058824 , 0.54901963, 1.        ],\n",
+              "        [0.59607846, 0.63529414, 0.45882353, 1.        ],\n",
+              "        [0.44705883, 0.47058824, 0.3372549 , 1.        ]],\n",
+              "\n",
+              "       [[0.44313726, 0.43529412, 0.40392157, 1.        ],\n",
+              "        [0.3137255 , 0.31764707, 0.27450982, 1.        ],\n",
+              "        [0.2       , 0.21176471, 0.14117648, 1.        ],\n",
+              "        ...,\n",
+              "        [0.5058824 , 0.5372549 , 0.4117647 , 1.        ],\n",
+              "        [0.49803922, 0.52156866, 0.39607844, 1.        ],\n",
+              "        [0.4       , 0.42745098, 0.34117648, 1.        ]],\n",
+              "\n",
+              "       [[0.39607844, 0.38039216, 0.34117648, 1.        ],\n",
+              "        [0.31764707, 0.3137255 , 0.27450982, 1.        ],\n",
+              "        [0.28627452, 0.29411766, 0.24705882, 1.        ],\n",
+              "        ...,\n",
+              "        [0.44705883, 0.45882353, 0.32156864, 1.        ],\n",
+              "        [0.45882353, 0.48235294, 0.3529412 , 1.        ],\n",
+              "        [0.4509804 , 0.49019608, 0.38039216, 1.        ]],\n",
+              "\n",
+              "       [[0.40392157, 0.3882353 , 0.36078432, 1.        ],\n",
+              "        [0.41960785, 0.41960785, 0.39607844, 1.        ],\n",
+              "        [0.5137255 , 0.5372549 , 0.50980395, 1.        ],\n",
+              "        ...,\n",
+              "        [0.41568628, 0.41960785, 0.28235295, 1.        ],\n",
+              "        [0.4392157 , 0.4627451 , 0.3019608 , 1.        ],\n",
+              "        [0.48235294, 0.5254902 , 0.37254903, 1.        ]],\n",
+              "\n",
+              "       [[0.41568628, 0.40784314, 0.38431373, 1.        ],\n",
+              "        [0.54901963, 0.5647059 , 0.5372549 , 1.        ],\n",
+              "        [0.65882355, 0.7019608 , 0.6627451 , 1.        ],\n",
+              "        ...,\n",
+              "        [0.42745098, 0.41960785, 0.31764707, 1.        ],\n",
+              "        [0.42352942, 0.43137255, 0.29803923, 1.        ],\n",
+              "        [0.4509804 , 0.47843137, 0.32941177, 1.        ]]], dtype=float32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 157
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zsn12jge6g4E",
+        "outputId": "c1dabe11-9593-40ae-c541-ca4d5a7e99e2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "dog = imread(\"dog-photo.png\")\n",
+        "print(type(dog))"
+      ],
+      "execution_count": 158,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'numpy.ndarray'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pGUKC6l86lnL",
+        "outputId": "cfe7bfea-87e6-431d-9884-140494672b4c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "dog.size, dog.shape, dog.ndim"
+      ],
+      "execution_count": 159,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(993600, (432, 575, 4), 3)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 159
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Cd5VHj896rFu",
+        "outputId": "ec4e493f-e206-45cd-9460-f65a75cb8551",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "dog[:5]"
+      ],
+      "execution_count": 160,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[[0.70980394, 0.80784315, 0.88235295, 1.        ],\n",
+              "        [0.72156864, 0.8117647 , 0.8862745 , 1.        ],\n",
+              "        [0.7411765 , 0.8156863 , 0.8862745 , 1.        ],\n",
+              "        ...,\n",
+              "        [0.49803922, 0.6862745 , 0.8392157 , 1.        ],\n",
+              "        [0.49411765, 0.68235296, 0.8392157 , 1.        ],\n",
+              "        [0.49411765, 0.68235296, 0.8352941 , 1.        ]],\n",
+              "\n",
+              "       [[0.69411767, 0.8039216 , 0.8862745 , 1.        ],\n",
+              "        [0.7019608 , 0.8039216 , 0.88235295, 1.        ],\n",
+              "        [0.7058824 , 0.80784315, 0.88235295, 1.        ],\n",
+              "        ...,\n",
+              "        [0.5019608 , 0.6862745 , 0.84705883, 1.        ],\n",
+              "        [0.49411765, 0.68235296, 0.84313726, 1.        ],\n",
+              "        [0.49411765, 0.68235296, 0.8392157 , 1.        ]],\n",
+              "\n",
+              "       [[0.6901961 , 0.8       , 0.88235295, 1.        ],\n",
+              "        [0.69803923, 0.8039216 , 0.88235295, 1.        ],\n",
+              "        [0.7058824 , 0.80784315, 0.88235295, 1.        ],\n",
+              "        ...,\n",
+              "        [0.5019608 , 0.6862745 , 0.84705883, 1.        ],\n",
+              "        [0.49803922, 0.6862745 , 0.84313726, 1.        ],\n",
+              "        [0.49803922, 0.6862745 , 0.84313726, 1.        ]],\n",
+              "\n",
+              "       [[0.7058824 , 0.8039216 , 0.8862745 , 1.        ],\n",
+              "        [0.74509805, 0.81960785, 0.8862745 , 1.        ],\n",
+              "        [0.7647059 , 0.83137256, 0.8901961 , 1.        ],\n",
+              "        ...,\n",
+              "        [0.5058824 , 0.69411767, 0.84705883, 1.        ],\n",
+              "        [0.5019608 , 0.6901961 , 0.84705883, 1.        ],\n",
+              "        [0.49803922, 0.6862745 , 0.84705883, 1.        ]],\n",
+              "\n",
+              "       [[0.7176471 , 0.80784315, 0.8862745 , 1.        ],\n",
+              "        [0.7411765 , 0.81960785, 0.8862745 , 1.        ],\n",
+              "        [0.77254903, 0.8352941 , 0.89411765, 1.        ],\n",
+              "        ...,\n",
+              "        [0.5137255 , 0.69411767, 0.84313726, 1.        ],\n",
+              "        [0.5058824 , 0.69411767, 0.84313726, 1.        ],\n",
+              "        [0.5019608 , 0.6901961 , 0.84705883, 1.        ]]], dtype=float32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 160
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ps9RxGTe6vGz"
       },
       "source": [
         ""
